bugfix - page title in ie11 not honouring flex spacing so made the wrapper a flex container, grow it to fill the available space and align title to the bottom of the header

--- a/opentech/static_src/src/sass/components/_wrapper.scss
+++ b/opentech/static_src/src/sass/components/_wrapper.scss
@@ -210,4 +210,11 @@
     &--project {
         padding-top: 2rem;
     }
+
+    &--page-title {
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+        justify-content: flex-end;
+    }
 }
