--- a/opentech/static_src/src/sass/layout/_header.scss
+++ b/opentech/static_src/src/sass/layout/_header.scss
@@ -4,7 +4,7 @@
     padding: 10px;
     background-color: $color--primary;
 
-    &::before {
+    &::after {
         @extend %overlay;
         height: 300px;
     }
